--- a/src/index.html
+++ b/src/index.html
@@ -11,42 +11,44 @@
 <body>
 
     <header class="header">
-        <div class="container container--nav">
-            <div class="nav">
-                <ul class="nav-menu">
-                    <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">ABOUT</a>
-                    </li>
-                    <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">TESTIMONIALS</a>
-                    </li>
-                    <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">SERVICES</a>
-                    </li>
-                    <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">PORTFOLIO</a>
-                    </li>
-                    <li class="nav-menu__item">
-                        <a class="nav-menu__link" href="#">CONTACT</a>
-                    </li>
-                </ul>
-                <div class="nav-logo">
-                    <a class="nav-logo__link" href="#">
-                        <img src="./img/logo.png" class="nav-logo__img" alt="">
-                    </a>
-                </div>
-                <div class="nav-btn">
-                    <a class="btn--nav" href="#">REQUEST A QUOTE</a>
+        <div class="block-position">
+            <div class="container container--nav">
+                <div class="nav">
+                    <ul class="nav-menu">
+                        <li class="nav-menu__item">
+                            <a class="nav-menu__link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-menu__item">
+                            <a class="nav-menu__link" href="#">TESTIMONIALS</a>
+                        </li>
+                        <li class="nav-menu__item">
+                            <a class="nav-menu__link" href="#">SERVICES</a>
+                        </li>
+                        <li class="nav-menu__item">
+                            <a class="nav-menu__link" href="#">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-menu__item">
+                            <a class="nav-menu__link" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                    <div class="nav-logo">
+                        <a class="nav-logo__link" href="#">
+                            <img src="./img/logo.png" class="nav-logo__img" alt="">
+                        </a>
+                    </div>
+                    <div class="nav-btn">
+                        <a class="btn--nav" href="#">REQUEST A QUOTE</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container container--banner">
-            <div class="banner">
-                <p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
-                <h1 class="banner-info">We give you the stuff you need to make more money</h1>
-                <p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool
-                    you need to become unstoppable. 2018 is the year you become rich.</p>
-                <a href="#" class="btn btn--banner">Claim your free consultation</a>
+            <div class="container container--banner">
+                <div class="banner">
+                    <p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
+                    <h1 class="banner-info">We give you the stuff you need to make more money</h1>
+                    <p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool
+                        you need to become unstoppable. 2018 is the year you become rich.</p>
+                    <a href="#" class="btn btn--banner">Claim your free consultation</a>
+                </div>
             </div>
         </div>
     </header>
@@ -228,28 +230,30 @@
     </section>
 
     <footer class="contact">
-        <div class="container container--contact">
-            <h2 class="title  title--contact">Contact us today to learn how we increase your revenue.</h2>
-            <div class="contact-form">
-                <div class="form-field">
+        <div class="block-position">
+            <div class="container container--contact">
+                <h2 class="title  title--contact">Contact us today to learn how we increase your revenue.</h2>
+                <div class="contact-form">
+                    <div class="form-field">
 					<span class="form-field__icon">
 						<img src="./img/contact-icon.png" alt="">
 					</span>
-                    <input type="text" class="form-control" placeholder="Your name">
-                </div>
-                <div class="form-field">
+                        <input type="text" class="form-control" placeholder="Your name">
+                    </div>
+                    <div class="form-field">
 					<span class="form-field__icon">
 						<img src="./img/contact-mail.png" alt="">
 					</span>
-                    <input type="email" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-field">
+                        <input type="email" class="form-control" placeholder="Email">
+                    </div>
+                    <div class="form-field">
 					<span class="form-field__icon form-field__icon--question">
                         <img src="./img/contact-question.png" alt="">
 					</span>
-                    <textarea class="form-control form-control_texted" placeholder="How we can help you?"></textarea>
+                        <textarea class="form-control form-control_texted" placeholder="How we can help you?"></textarea>
+                    </div>
+                    <a href="#" class="btn btn--contact">Claim your free consultation</a>
                 </div>
-                <a href="#" class="btn btn--contact">Claim your free consultation</a>
             </div>
         </div>
     </footer>
