making relative for tablets 769px

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
     <header class="header">
         <div class="nav">
             <div class="container container--nav">
+                <button class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
                 <ul class="nav-menu">
                     <li class="nav-menu__item">
                         <a class="nav-menu__link" href="#">ABOUT</a>
@@ -53,67 +58,66 @@
 
     <section class="about">
         <div class="container container--about">
-            <h2 class="title title--texted">You come up with the usiness, we’ll build the website</h2>
-            <p class="text">Maybe you’ve hired someone in the past to create your website, only to find out they
-                know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked with a
-                content creator who writes suspiciously like a robot.</p>
-            <img class="about__img" src="img/about-img.png" alt="#">
-            <p class="text">Or worse, you’ve heard horror stories about programmers, web designers and writers who
-                sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one can
-                stop you now from working with us.</p>
-            <div class="btn">
-                <a href="#" class="btn btn--about">Claim your free consultation</a>
+            <div class="about__company">
+                <h2 class="title title--texted">You come up with the usiness, we’ll build the website</h2>
+                <p class="text">Maybe you’ve hired someone in the past to create your website, only to find out they
+                    know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked with a
+                    content creator who writes suspiciously like a robot.</p>
+                <img class="about_img" src="img/about-img.png" alt="#">
+                <p class="text">Or worse, you’ve heard horror stories about programmers, web designers and writers who
+                    sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one can
+                    stop you now from working with us.</p>
+                <div class="btn">
+                    <a href="#" class="btn btn--about">Claim your free consultation</a>
+                </div>
             </div>
-            <div class="quotes"><img src="img/quotes.png" alt=""></div>
-
-            <div class="about-slider">
-
-                <div class="about__client">
-                    <div class="about__client_info">
+            <div class="quotes">
+                <img class="quotes_img" src="img/quotes.png" alt="">
+            </div>
+            <div class="about__client">
+                <div class="about-slider">
+                    <div class="client">
                         <img class="client_photo" src="img/client.jpg" alt="">
-                        <p class="text">We have worked with Digital Crafters for several years across a range of
+                        <p class="text text-client">We have worked with Digital Crafters for several years across a range of
                             projects. They have built the critical elements of our system and have always delivered a
                             strong return on investment. Moreover, they are a pleasure to work with — always
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
-                        <div class="client">
-                            <span class="client_name">Todd Quinto</span>
-                            <span class="client_position"> - CEO at Endave Software</span>
+                        <div class="client_info">
+                            <span class="client_info-name">Todd Quinto</span>
+                            <span class="client_info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
-                </div>
 
-                <div class="about__client">
-                    <div class="about__client_info">
-                        <img class="client_photo" src="#" alt="">
-                        <p class="text">We have worked with Digital Crafters for several years across a range of
+                    <div class="client">
+                        <img class="client_photo" src="img/client.jpg" alt="">
+                        <p class="text text-client">We have worked with Digital Crafters for several years across a range of
                             projects. They have built the critical elements of our system and have always delivered a
                             strong return on investment. Moreover, they are a pleasure to work with — always
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
-                        <div class="client">
-                            <span class="client_name">Sashka</span>
-                            <span class="client_position"> - CEO at Endave Software</span>
+                        <div class="client_info">
+                            <span class="client_info-name">Todd Quinto 2</span>
+                            <span class="client_info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
-                </div>
 
-                <div class="about__client">
-                    <div class="about__client_info">
-                        <img class="client_photo" src="#" alt="">
-                        <p class="text">We have worked with Digital Crafters for several years across a range of
+                    <div class="client">
+                        <img class="client_photo" src="img/client.jpg" alt="">
+                        <p class="text text-client">We have worked with Digital Crafters for several years across a range of
                             projects. They have built the critical elements of our system and have always delivered a
                             strong return on investment. Moreover, they are a pleasure to work with — always
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
-                        <div class="client">
-                            <span class="client_name">Deniska</span>
-                            <span class="client_position"> - CEO at Endave Software</span>
+                        <div class="client_info">
+                            <span class="client_info-name">Todd Quinto 3</span>
+                            <span class="client_info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
                 </div>
+                <div class="about-slider__buttons"></div>
             </div>
-            <div class="about-slider__buttons"></div>
+
         </div>
     </section>
 
@@ -227,8 +231,8 @@
         </div>
     </section>
 
-    <footer class="contact">
-        <div class="block-position">
+    <footer class="footer">
+        <div class="contact">
             <div class="container container--contact">
                 <h2 class="title  title--contact">Contact us today to learn how we increase your revenue.</h2>
                 <div class="contact-form">
