--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,9 @@
         </div>
         <div class="banner">
             <div class="container container--banner">
-                <p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
-                <h1 class="banner-info">We give you the stuff you need to make more money</h1>
-                <p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool
+                <p class="banner__head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
+                <h1 class="banner__info">We give you the stuff you need to make more money</h1>
+                <p class="banner__descr">Bring us your remarkable business. We’ll give you the design, content and tool
                     you need to become unstoppable. 2018 is the year you become rich.</p>
                 <a href="#" class="btn btn--banner">Claim your free consultation</a>
             </div>
@@ -58,84 +58,76 @@
 
     <section class="about">
         <div class="container container--about">
-            <div class="about__company">
+            <div class="about-company">
                 <h2 class="title title--texted">You come up with the usiness, we’ll build the website</h2>
                 <p class="text">Maybe you’ve hired someone in the past to create your website, only to find out they
-                    know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked with a
-                    content creator who writes suspiciously like a robot.</p>
-                <img class="about_img" src="img/about-img.png" alt="#">
+                    know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked
+                    with a content creator who writes suspiciously like a robot.</p>
+                <img class="about-company__img" src="img/about-img.png" alt="#">
                 <p class="text">Or worse, you’ve heard horror stories about programmers, web designers and writers who
-                    sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one can
-                    stop you now from working with us.</p>
-                <div class="btn">
-                    <a href="#" class="btn btn--about">Claim your free consultation</a>
-                </div>
+                    sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one
+                    can stop you now from working with us.
+                </p>
+                <a href="#" class="btn btn--about">Claim your free consultation</a>
             </div>
-            <div class="quotes">
-                <img class="quotes_img" src="img/quotes.png" alt="">
-            </div>
-            <div class="about__client">
-                <div class="about-slider">
+            <div class="about-client">
+                <img class="about-client__quotes" src="img/quotes.png" alt="">
+                <div class="about-client__slider">
                     <div class="client">
-                        <img class="client_photo" src="img/client.jpg" alt="">
-                        <p class="text text-client">We have worked with Digital Crafters for several years across a range of
+                        <img class="client__photo" src="img/client.jpg" alt="">
+                        <p class="text">We have worked with Digital Crafters for several years across a range of
                             projects. They have built the critical elements of our system and have always delivered a
                             strong return on investment. Moreover, they are a pleasure to work with — always
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
-                        <div class="client_info">
-                            <span class="client_info-name">Todd Quinto</span>
-                            <span class="client_info-position"> - CEO at Endave Software</span>
+                        <div class="client__info">
+                            <span class="client__info-name">Todd Quinto</span>
+                            <span class="client__info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
-
                     <div class="client">
-                        <img class="client_photo" src="img/client.jpg" alt="">
-                        <p class="text text-client">We have worked with Digital Crafters for several years across a range of
+                        <img class="client__photo" src="img/client.jpg" alt="">
+                        <p class="text">We have worked with Digital Crafters for several years across a range of
                             projects. They have built the critical elements of our system and have always delivered a
                             strong return on investment. Moreover, they are a pleasure to work with — always
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
-                        <div class="client_info">
-                            <span class="client_info-name">Todd Quinto 2</span>
-                            <span class="client_info-position"> - CEO at Endave Software</span>
+                        <div class="client__info">
+                            <span class="client__info-name">Todd Quinto</span>
+                            <span class="client__info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
-
                     <div class="client">
-                        <img class="client_photo" src="img/client.jpg" alt="">
-                        <p class="text text-client">We have worked with Digital Crafters for several years across a range of
+                        <img class="client__photo" src="img/client.jpg" alt="">
+                        <p class="text">We have worked with Digital Crafters for several years across a range of
                             projects. They have built the critical elements of our system and have always delivered a
                             strong return on investment. Moreover, they are a pleasure to work with — always
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
-                        <div class="client_info">
-                            <span class="client_info-name">Todd Quinto 3</span>
-                            <span class="client_info-position"> - CEO at Endave Software</span>
+                        <div class="client__info">
+                            <span class="client__info-name">Todd Quinto</span>
+                            <span class="client__info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
                 </div>
-                <div class="about-slider__buttons"></div>
+                <div class="about-client__slider-buttons"></div>
             </div>
-
         </div>
     </section>
 
     <section class="services">
         <div class="container container--services">
-            <h2 class="title  title--services">Our Services</h2>
-            <div class="text">
-                <p class="text-services">
-                    We’ll do everything we can to grow your revenue. Our motivation is to drive your business further
-                    that you can imagine.
-                </p>
+            <h2 class="title title--services">Our Services</h2>
+            <div class="text text--services">
+                We’ll do everything we can to grow your revenue. Our motivation is to drive your business further
+                that you can imagine.
             </div>
-            <div class="services__item">
-                <div class="services__item_icon">
+            <div class="services-item">
+                <div class="services-item__icon-wrapper">
                     <img src="img/journal-icon.png" alt="">
                 </div>
-                <h3 class="services__item_heading">Copywriting Material</h3>
-                <p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers
+                <h3 class="services-item__heading">Copywriting Material</h3>
+                <p class="services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
             <div class="services__item">
@@ -175,34 +167,33 @@
 
     <section class="portfolio">
         <div class="container container--portfolio">
-            <h2 class="title  title--portfolio">Our Portfolio</h2>
-            <div class="text">
-                <p class="text-portfolio">
-                    We’ll do everything we can to grow your revenue. Our motivation is to drive your business further
-                    that you can imagine.
-                </p>
+            <h2 class="title title--portfolio">Our Portfolio</h2>
+            <div class="text text--portfolio">
+                We’ll do everything we can to grow your revenue. Our motivation is to drive your business further
+                that you can imagine.
             </div>
 
-            <div class="portfolio-box">
+            <div class="portfolio-slider-wrapper">
                 <div class="portfolio-slider">
-                    <div class="portfolio__item">
-                        <div class="portfolio__item-img">
+                    <div class="portfolio-slider-item">
+                        <div class="portfolio-slider-item__img">
                             <img src="./img/portfolio-img.png" alt="">
                         </div>
-                        <div class="portfolio__item-info">
-                            <div class="portfolio__item-info_icon">
+                        <div class="portfolio-slider-item__info">
+                            <div class="portfolio-slider-item__icon">
                                 <img src="./img/icon-portfolio.png" alt="">
                             </div>
-                            <div class="portfolio__item-info_heading">LandingZap App</div>
-                            <p class="text portfolio__item-info_text">There are many variations of passages of Lorem
+                            <div class="portfolio-slider-item__heading">LandingZap App</div>
+                            <p class="text text--portfolio-slider">There are many variations of passages of Lorem
                                 Ipsum available, but the majority have suffered alteration in some form, by injected
                                 humour, or randomised words which don't look even slightly believable.</p>
-                            <div class="portfolio__item-info_skills">
+                            <div class="portfolio-slider-item__skills">
                                 <div class="skills">UI</div>
                                 <div class="skills">UX</div>
                                 <div class="skills">MOBILE APP</div>
                             </div>
                         </div>
+                        <div class="portfolio-slider-buttons"></div>
                     </div>
 
                     <div class="portfolio__item">
@@ -223,9 +214,9 @@
                                 <div class="skills">MOBILE APP</div>
                             </div>
                         </div>
+                        <div class="portfolio-slider-buttons"></div>
                     </div>
                 </div>
-                <div class="portfolio-slider__buttons"></div>
             </div>
 
         </div>
@@ -234,28 +225,28 @@
     <footer class="footer">
         <div class="contact">
             <div class="container container--contact">
-                <h2 class="title  title--contact">Contact us today to learn how we increase your revenue.</h2>
-                <div class="contact-form">
+                <h2 class="title title--contact">Contact us today to learn how we increase your revenue.</h2>
+                <form class="form form--contact">
                     <div class="form-field">
-					<span class="form-field__icon">
-						<img src="./img/contact-icon.png" alt="">
-					</span>
-                        <input type="text" class="form-control" placeholder="Your name">
+                        <label class="form-field__label" for="name">
+                            <img src="./img/contact-icon.png" alt="">
+                        </label>
+                        <input type="text" class="form-field__input" id="name" placeholder="Your name">
                     </div>
                     <div class="form-field">
-					<span class="form-field__icon">
-						<img src="./img/contact-mail.png" alt="">
-					</span>
-                        <input type="email" class="form-control" placeholder="Email">
+                        <label class="form-field__label" for="email">
+                            <img src="./img/contact-mail.png" alt="">
+                        </label>
+                        <input type="email" id="email" class="form-field__input" placeholder="Email">
                     </div>
                     <div class="form-field">
-					<span class="form-field__icon form-field__icon--question">
-                        <img src="./img/contact-question.png" alt="">
-					</span>
-                        <textarea class="form-control form-control_texted" placeholder="How we can help you?"></textarea>
+                        <span class="form-field__label" for="textarea">
+                            <img src="./img/contact-question.png" alt="">
+                        </span>
+                        <textarea class="form-field__input form-field__input--textarea" id="textarea" placeholder="How we can help you?"></textarea>
                     </div>
-                    <a href="#" class="btn btn--contact">Claim your free consultation</a>
-                </div>
+                    <input type="submit" class="btn btn--contact" value="Claim your free consultation" />
+                </form>
             </div>
         </div>
     </footer>
