making some fixes

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
                         <div class="client__info">
-                            <span class="client__info-name">Todd Quinto</span>
+                            <span class="client__info-name">Todd Quinto 2</span>
                             <span class="client__info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
@@ -105,12 +105,12 @@
                             enthusiastic, professional and with a positive culture. I would, and have, recommended them
                             to others in need of flexible development capacity.</p>
                         <div class="client__info">
-                            <span class="client__info-name">Todd Quinto</span>
+                            <span class="client__info-name">Todd Quinto 3</span>
                             <span class="client__info-position"> - CEO at Endave Software</span>
                         </div>
                     </div>
                 </div>
-                <div class="about-client__slider-buttons"></div>
+                <div class="about-client__slider-controls"></div>
             </div>
         </div>
     </section>
@@ -127,39 +127,39 @@
                     <img src="img/journal-icon.png" alt="">
                 </div>
                 <h3 class="services-item__heading">Copywriting Material</h3>
-                <p class="services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
-            <div class="services__item">
-                <div class="services__item_icon">
+            <div class="services-item">
+                <div class="services-item__icon-wrapper">
                     <img src="img/home-page-icon.png" alt="">
                 </div>
-                <h3 class="services__item_heading">Landing Page Design</h3>
-                <p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers
+                <h3 class="services-item__heading">Landing Page Design</h3>
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
-            <div class="services__item">
-                <div class="services__item_icon">
+            <div class="services-item">
+                <div class="services-item__icon-wrapper">
                     <img src="img/megaphone-icon.png" alt="">
                 </div>
-                <h3 class="services__item_heading">Full Marketing Design</h3>
-                <p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers
+                <h3 class="services-item__heading">Full Marketing Design</h3>
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
-            <div class="services__item">
-                <div class="services__item_icon">
+            <div class="services-item">
+                <div class="services-item__icon-wrapper">
                     <img src="img/browser-window-icon.png" alt="">
                 </div>
-                <h3 class="services__item_heading">Website Development</h3>
-                <p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers
+                <h3 class="services-item__heading">Website Development</h3>
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
-            <div class="services__item">
-                <div class="services__item_icon">
+            <div class="services-item">
+                <div class="services-item__icon-wrapper">
                     <img src="img/bookmark-icon.png" alt="">
                 </div>
-                <h3 class="services__item_heading">Marketing Materials</h3>
-                <p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers
+                <h3 class="services-item__heading">Marketing Materials</h3>
+                <p class="text services-item__text">Or worse, you’ve heard horror stories about programmers, web designers
                     and writers who sprint out of the starting blocks.</p>
             </div>
         </div>
@@ -192,31 +192,31 @@
                                 <div class="skills">UX</div>
                                 <div class="skills">MOBILE APP</div>
                             </div>
+                            <div class="portfolio-slider-buttons"></div>
                         </div>
-                        <div class="portfolio-slider-buttons"></div>
                     </div>
-
-                    <div class="portfolio__item">
-                        <div class="portfolio__item-img">
+                    <div class="portfolio-slider-item">
+                        <div class="portfolio-slider-item__img">
                             <img src="./img/portfolio-img.png" alt="">
                         </div>
-                        <div class="portfolio__item-info">
-                            <div class="portfolio__item-info_icon">
+                        <div class="portfolio-slider-item__info">
+                            <div class="portfolio-slider-item__icon">
                                 <img src="./img/icon-portfolio.png" alt="">
                             </div>
-                            <div class="portfolio__item-info_heading">LandingZap App 2</div>
-                            <p class="text portfolio__item-info_text">There are many variations of passages of Lorem
+                            <div class="portfolio-slider-item__heading">LandingZap App 2</div>
+                            <p class="text text--portfolio-slider">There are many variations of passages of Lorem
                                 Ipsum available, but the majority have suffered alteration in some form, by injected
                                 humour, or randomised words which don't look even slightly believable.</p>
-                            <div class="portfolio__item-info_skills">
+                            <div class="portfolio-slider-item__skills">
                                 <div class="skills">UI</div>
                                 <div class="skills">UX</div>
                                 <div class="skills">MOBILE APP</div>
                             </div>
+                            <div class="portfolio-slider-buttons"></div>
                         </div>
-                        <div class="portfolio-slider-buttons"></div>
                     </div>
                 </div>
+
             </div>
 
         </div>
