Slider arrows is working now

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,10 @@
                                 <div class="skills">UX</div>
                                 <div class="skills">MOBILE APP</div>
                             </div>
-                            <div class="portfolio-slider-buttons"></div>
+                            <div class="portfolio-slider-buttons">
+                                <button type="button" class="slider-prev"><img src="./img/left.png" alt="<" /></button>
+                                <button type="button" class="slider-next"><img src="./img/right.png" alt=">" /></button>
+                            </div>
                         </div>
                     </div>
                     <div class="portfolio-slider-item">
@@ -212,7 +215,10 @@
                                 <div class="skills">UX</div>
                                 <div class="skills">MOBILE APP</div>
                             </div>
-                            <div class="portfolio-slider-buttons"></div>
+                            <div class="portfolio-slider-buttons">
+                                <button type="button" class="slider-prev"><img src="./img/left.png" alt="<" /></button>
+                                <button type="button" class="slider-next"><img src="./img/right.png" alt=">" /></button>
+                            </div>
                         </div>
                     </div>
                 </div>
